--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,26 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Build & Publish Image
+      run: echo Build Image   
+
+  deploydev:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy Development
+        run: echo app deployed en dev
+     
+  deploypre:
+    needs: deploydev
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy PRE
+        run: echo app deployed en PRE
+
+  deploypro:
+    needs: deploypre
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy PRO
+        run: echo app deployed en PRO
